@@ -2,6 +2,7 @@
         - Improvement of NKJP-annotation helper. (diewald)
         - Add redirect-uri to client view. (diewald)
         - Added german translation for Cosmas-II. (hebasta)
+        - Require at least conllu2korapxml v0.6.1. (diewald)
 
 0.49 2023-02-23
         - Introduce conllu2korapxml command via plugin. (diewald)
